Fixed double scrollbar issue and improved AOS animations

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,10 +4,11 @@
 
 body {
   @apply overflow-x-hidden;
+  
 }
 
 html {
-  scroll-behavior: smooth;
+   overflow-y: scroll;
 }
 
 .glow {
